--- a/example/web/index.html
+++ b/example/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>flutter_package_template_example</title>
+  <title>donut_chart_example</title>
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
